--- a/.github/ISSUE_TEMPLATE/new_repo.yml
+++ b/.github/ISSUE_TEMPLATE/new_repo.yml
@@ -19,3 +19,5 @@ body:
       description: This repo will be a Django project
       options:
         - label: I want django!
+        - label: I want channels
+        - label: I also want awesomeness!
