--- a/.github/ISSUE_TEMPLATE/new_repo.yml
+++ b/.github/ISSUE_TEMPLATE/new_repo.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for giving me more work!
+        Enter the name for your repository and then what you want
   - type: input
     id: repo-name
     attributes:
